--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:replace="admin/_fragments :: head('分類')">
+<head th:replace="admin/_fragments :: head('Tags')">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>分類</title>
+    <title>Tags</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../static/theme/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
