--- a/src/main/resources/templates/_fragments.html
+++ b/src/main/resources/templates/_fragments.html
@@ -59,7 +59,7 @@
                         </span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="nav-link" href="#" >About Me</a></li>
+                        <li><a class="nav-link" href="#" th:href="@{/admin/blogs}">About Me</a></li>
                         <li class="dropdown-divider"></li>
                         <li><a class="nav-link" href="#" th:href="@{/admin/logout}">Logout</a></li>
                     </ul>
@@ -183,7 +183,7 @@
                         </a>
                     </li>
                 </ul>
-                <p class="copyright text-muted">Copyright &copy; Your Website 2019</p>
+                <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
             </div>
         </div>
     </div>
