--- a/src/main/resources/templates/admin/blogs-input.html
+++ b/src/main/resources/templates/admin/blogs-input.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head th:replace="admin/_fragments :: head('blogInput')">
+<head th:replace="admin/_fragments :: head('BlogInput')">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title th:text="blogInput"></title>
+    <title th:text="BlogInput"></title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../static/theme/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -95,16 +95,15 @@
             <br>
             <div id="success"></div>
             <div class="form-row">
-                <div class="form-group col-md-2" >
-                    <button  type="button" class="btn btn-primary text-white" id="BackButton" onclick="window.history.go(-1)">Back</button>
-                </div>
-                &nbsp;
                 <div class="form-group col-md-2">
                     <button type="submit"  id="save-btn" class="btn btn-primary" >Save</button>
                 </div>
-                &nbsp;
                 <div class="form-group col-md-2">
                     <button type="submit" id="publish-btn" class="btn btn-primary" >Publish</button>
+                </div>
+                &nbsp;
+                <div class="form-group col-md-2" >
+                    <button class="btn btn-primary text-white" id="back-btn" onclick="window.history.go(-1)">Back</button>
                 </div>
             </div>
         </form>
